# RS1

./: CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml  robot1_nav2_params.yaml  robot2_localization.yaml  robot2_slam_params.yaml  robot_localization.yaml  trees_moisture.yaml
config/exp/: robot1_localization.yaml  robot1_slam_params.yaml  robot2_nav2_params.yaml
include/soil_moisture_sensor/: soil_moisture_sensor.hpp  soil_moisture_visualiser.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rs1/share/rs1/: package.bash  package.zsh
launch/: 41068_ignition.launch.py  41068_navigation.launch.py  mulit_ig  multi_nav  soil_sensor_launch.py
log/: latest_build
src/: mission.py  navigation.py  robot.py
src/cpp/: soil_moisture_sensor.cpp  soil_moisture_visualiser.cpp  soil_moisture_visualiser_node.cpp
src/env_pkg/config/: nav2_params.yaml  soil_moisture_pkg.rvis
src/env_pkg/config/exp/: mulit_bridge
src/env_pkg/src/: behaviourTree.py  imageRecognition.py  laserScan.py  mission.py  navigation.py  robot.py  robot_behaviour.py
src/env_pkg/urdf/: wheel.urdf.xacro
src/python/: behaviourTree.py  mission.py  navigation.py  robot.py  robot_behaviour.py
src/soil_moisture_sensor_pkg/: CMakeLists.txt  package.xml
src/soil_moisture_sensor_pkg/config/: trees.yaml
src/soil_moisture_sensor_pkg/src/: soil_moisture_sensor.cpp  soil_moisture_visualiser.cpp  soil_moisture_visualiser_node.cpp
src/tb4_env_ui/: CMakeLists.txt  package.xml
src/tb4_env_ui/src/: image_widget.cpp  main.cpp  ros_client.cpp
tb4_env_ui/: CMakeLists.txt
tb4_env_ui/include/: image_widget.h  mainwindow.h  process_launcher.h  ros_client.h  ros_image_bridge.h
tb4_env_ui/src/: mainwindow.cpp  process_launcher.cpp  ros_image_bridge.cpp
urdf/: husky.gazebo.xacro  husky.urdf.xacro
worlds/: large_demo.sdf
